@@ -1,3 +1,11 @@
+Summary of important user-visible changes for general 1.X.X:
+-------------------------------------------------------------------
+
+ ** The dict class has been deprecated in favour of structs which
+    now support arbitrary strings as valid fieldnames.  See the
+    help of @dict for an example.
+
+
 Summary of important user-visible changes for general 1.3.2:
 -------------------------------------------------------------------
 
